input label2id feature based mapping

--- a/configs/custom_model/roberta_large_mnli.yaml
+++ b/configs/custom_model/roberta_large_mnli.yaml
@@ -1,4 +1,4 @@
-model_name: "ishan/bert-base-uncased-mnli"
+model_name: "roberta-large-mnli"
 tokenizer:
   model_name: ${..model_name}
   label2id:
