adding other calibration metrics + plots

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ datasets==2.7.0
 debugpy==1.6.3
 numpy==1.19.5
 transformers==4.24.0
+matplotlib==3.6.2
 
 # --------- hydra --------- #
 hydra-core==1.2.0
