--- a/configs/callbacks/acc.yaml
+++ b/configs/callbacks/acc.yaml
@@ -1,3 +1,4 @@
 accuracy_callback:
   _target_: src.callbacks.evals.discriminative.AccuracyMetric
   monitor: "all"
+  results_dir: ${paths.result_dir}
