--- a/configs/logger/csv.yaml
+++ b/configs/logger/csv.yaml
@@ -3,5 +3,5 @@
 csv:
   _target_: pytorch_lightning.loggers.csv_logs.CSVLogger
   save_dir: "${paths.output_dir}"
-  name: "csv/"
+  name: "results/"
   prefix: ""
