--- a/configs/eval.yaml
+++ b/configs/eval.yaml
@@ -2,6 +2,7 @@
 
 defaults:
   - _self_
+  - augmentation: default.yaml
   - callbacks: default.yaml
   - datamodule: mnli.yaml # choose datamodule with `test_dataloader()` for evaluation
   - model: inference.yaml
