--- a/configs/augmentation/dummy_aug.yaml
+++ b/configs/augmentation/dummy_aug.yaml
@@ -1,4 +1,4 @@
 test_augmentation:
-  _target_: src.augmentation.dummy_aug.DummyAug
+  _target_: src.augmentation.augments.DummyAug
   _partial_: true
-  __name__: "dummy"
+  __name__: "DUMMY"
