--- a/configs/model/inference.yaml
+++ b/configs/model/inference.yaml
@@ -3,3 +3,9 @@ _target_: src.models.inference_module.InferenceLitModule
 net:
   _target_: src.models.components.huggingface_basemodel.Model
   model_name: ${custom_model.model_name}
+  model_type: ${custom_model.model_type}
+  decoder_model_name: ${custom_model.decoder_model_name}
+  model_path: ${custom_model.model_path}
+  tie_embeddings: ${custom_model.tie_embeddings}
+  label: ${custom_model.label}
+  tie_encoder_decoder: ${custom_model.tie_encoder_decoder}
