--- a/configs/experiment/mnli.yaml
+++ b/configs/experiment/mnli.yaml
@@ -10,6 +10,7 @@ defaults:
   - override /callbacks: mnli.yaml
   - override /trainer: default.yaml
   - override /custom_model: bert_base_uncased.yaml
+  - override /logger: csv.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
