--- a/configs/custom_model/zero-shot-classification.yaml
+++ b/configs/custom_model/zero-shot-classification.yaml
@@ -6,7 +6,7 @@ model_path: null ## provide the path if you have custom trained model using tran
 tie_embeddings: false
 label: null
 tie_encoder_decoder: false
-pipeline: 'zero-shot-classification'
+pipeline: "zero-shot-classification"
 
 additional_model_inputs:
   multi_label: false
@@ -24,7 +24,7 @@ tokenizer:
 data_processing:
   header: null ## prompt header for input data?
   footer: null ## prompt header for signling output?
-  seprator: " " ## what is seperator token? leave `null` for generative models
+  separator: " " ## what is separator token? leave `null` for generative models
   columns:
     premise: "xnli: premise:"
     hypothesis: "hypothesis:"
