--- a/configs/custom_model/roberta_large_mnli.yaml
+++ b/configs/custom_model/roberta_large_mnli.yaml
@@ -23,8 +23,9 @@ tokenizer:
 data_processing:
   header: null ## prompt header for input data?
   footer: null ## prompt header for signling output?
-  seprator: " [SEP] " ## what is seperator token? leave `null` for generative models
-  columns: null
+  separator: " [SEP] " ## what is separator token? leave `null` for generative models
+  columns:
+    null
     ## you should define this only for generative or for prompt eng. models as shown below
     # premise: null
     # hypothesis: null
