--- a/reliability_score/configs/callbacks/calibration.yaml
+++ b/reliability_score/configs/callbacks/calibration.yaml
@@ -1,5 +1,5 @@
 calibration_callback:
-  _target_: src.callbacks.evals.discriminative.CalibrationMetric
+  _target_: reliability_score.callbacks.evals.discriminative.CalibrationMetric
   monitor: "all"
   results_dir: ${paths.result_dir}
   num_bins: 10
