--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ torch>=1.10.0
 torchvision>=0.11.0
 pytorch-lightning==1.8.2
 torchmetrics==0.10.3
-datasets==2.7.0
+datasets==2.7.1
 debugpy==1.6.3
 numpy==1.19.5
 transformers==4.24.0
 matplotlib==3.6.2
 sentencepiece==0.1.97
+nltk==3.8.1
+spacy==3.5.0
+pattern3 ## need to apply patch
 
 # --------- hydra --------- #
 hydra-core==1.2.0
