sensitivity with parrot paraphraser added

--- a/reliability_score/configs/callbacks/acc.yaml
+++ b/reliability_score/configs/callbacks/acc.yaml
@@ -2,3 +2,4 @@ accuracy_callback:
   _target_: reliability_score.callbacks.evals.discriminative.AccuracyMetric
   monitor: "all"
   results_dir: ${paths.result_dir}
+  override: null
