--- a/reliability_score/configs/augmentation/inv_pass.yaml
+++ b/reliability_score/configs/augmentation/inv_pass.yaml
@@ -1,4 +1,4 @@
-test_augmentation:
+inv_augmentation:
   _target_: reliability_score.augmentation.augments.simple_aug
   _partial_: true
   __name__: "INV_PASS"
