various bug resolved

--- a/reliability_score/configs/custom_model/huggingface_object.yaml
+++ b/reliability_score/configs/custom_model/huggingface_object.yaml
@@ -1,7 +1,10 @@
 ## below parameters are self-explanatory
-model_name: "ishan/bert-base-uncased-mnli"
+model_name: "facebook/bart-large-mnli"
 model_type: "discriminative" ## you can only have following types: "encode-decode","decoder-only","bart","discriminative","shared","hybrid","t5",
-huggingface_class: null
+huggingface_class:
+  _target_: transformers.AutoModelForSequenceClassification.from_pretrained
+  pretrained_model_name_or_path: ${..model_name}
+
 decoder_model_name: null
 model_path: null ## provide the path if you have custom trained model using transformers library
 tie_embeddings: false
@@ -9,13 +12,13 @@ label: null
 tie_encoder_decoder: false
 pipeline: null
 
-additional_model_inputs: null ## specify the additional pre-defined input to model like bean_search for generative models
+additional_model_inputs: null
 
 tokenizer:
   model_name: ${..model_name} ## only specify the name from huggingface if it's different than the actual  model
   label2id: ## this will vary based on the evaluation data, please refer to the your selected dataset config
-    contradiction: 1
-    neutral: 0
+    contradiction: 0
+    neutral: 1
     entailment: 2
   args:
     truncation: true
@@ -25,9 +28,7 @@ tokenizer:
 data_processing:
   header: null ## prompt header for input data?
   footer: null ## prompt header for signling output?
-  separator: " [SEP] " ## what is separator token? leave `null` for generative models
+  separator: " " ## what is separator token? leave `null` for generative models
   columns:
-    null
-    ## you should define this only for generative or for prompt eng. models as shown below
-    # premise: null
-    # hypothesis: null
+    premise: "premise: "
+    hypothesis: "hypothesis: "
