--- a/reliability_score/configs/custom_model/roberta_large_mnli.yaml
+++ b/reliability_score/configs/custom_model/roberta_large_mnli.yaml
@@ -1,6 +1,7 @@
 ## below parameters are self-explanatory
 model_name: "roberta-large-mnli"
 model_type: "discriminative" ## you can only have following types: "encode-decode","decoder-only","bart","discriminative","shared","hybrid","t5",
+huggingface_class: null
 decoder_model_name: null
 model_path: null ## provide the path if you have custom trained model using transformers library
 tie_embeddings: false
@@ -18,6 +19,7 @@ tokenizer:
     entailment: 2
   args:
     truncation: true
+    padding: "max_length"
 
 ## use following dataset pre-processing steps
 data_processing:
