--- a/reliability_score/configs/augmentation/parrot.yaml
+++ b/reliability_score/configs/augmentation/parrot.yaml
@@ -2,4 +2,6 @@ parrot_paraphraser:
   _target_: reliability_score.augmentation.augments.parrot_paraphraser
   _partial_: true
   __name__: "parrot"
-  csv_path: "./data/parrot_mnli.csv"
+  dataset_name: ${datamodule.dataset_specific_args.name}
+  csv_path: "./data/parrot_{}.csv"
+  cols: ${datamodule.dataset_specific_args.cols}
