--- a/reliability_score/configs/datamodule/sentiment140.yaml
+++ b/reliability_score/configs/datamodule/sentiment140.yaml
@@ -7,13 +7,16 @@ tokenizer_data: ${custom_model.tokenizer}
 model_type: ${custom_model.model_type}
 data_processing: ${custom_model.data_processing}
 dataset_specific_args:
-  label_conversion: null
+  label_conversion:
+    0: 0
+    2: 1
+    4: 2
   label2id:
-    0: "entailment"
+    0: "negative"
     1: "neutral"
-    2: "contradiction"
-  cols: ["premise", "hypothesis"]
-  name: multi_nli
-  split: validation_matched
-  remove_cols: ["promptID", "pairID"]
-  label_col: "label"
+    2: "positive"
+  cols: ["text"]
+  name: sentiment140
+  split: test
+  remove_cols: ["query", "user", "date"]
+  label_col: "sentiment"
