--- a/reliability_score/configs/task/example.yaml
+++ b/reliability_score/configs/task/example.yaml
@@ -6,7 +6,7 @@
 defaults:
   - override /datamodule: mnli.yaml
   - override /model: inference.yaml
-  - override /callbacks: mnli.yaml
+  - override /callbacks: general_evals.yaml
   - override /trainer: default.yaml
   - override /custom_model: bert_base_uncased.yaml
 
