--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,9 @@ matplotlib==3.6.2
 sentencepiece==0.1.97
 nltk==3.8.1
 spacy==3.5.0
+protobuf==3.20.*
 git+https://github.com/pattern3/pattern.git
+git+https://github.com/PrithivirajDamodaran/Parrot_Paraphraser.git
 
 # --------- hydra --------- #
 hydra-core==1.2.0
