--- a/reliability_score/configs/task/sentiment.yaml
+++ b/reliability_score/configs/task/sentiment.yaml
@@ -10,7 +10,7 @@ defaults:
   - override /callbacks: general_evals.yaml
   - override /trainer: default.yaml
   - override /custom_model: bert_base_uncased.yaml
-  - override /logger: csv.yaml
+  - override /logger: wandb.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
