double negative augment

--- a/reliability_score/configs/augmentation/sentiment.yaml
+++ b/reliability_score/configs/augmentation/sentiment.yaml
@@ -1,4 +1,5 @@
 defaults:
   - default.yaml
-  - parrot.yaml
-  - back_translate.yaml
+  # - parrot.yaml
+  # - back_translate.yaml
+  - double_denial.yaml
