dymanic radar chart support added

--- a/reliability_score/configs/callbacks/calibration.yaml
+++ b/reliability_score/configs/callbacks/calibration.yaml
@@ -4,4 +4,6 @@ calibration_callback:
   results_dir: ${paths.result_dir}
   num_bins: 10
   override: null
-  radar: false
+  radar: true
+  max_possible: 0.5
+  inverse: true
