--- a/reliability_score/configs/callbacks/selective_prediction.yaml
+++ b/reliability_score/configs/callbacks/selective_prediction.yaml
@@ -3,6 +3,6 @@ selecitve_prediction_callback:
   monitor: "all"
   results_dir: ${paths.result_dir}
   override: null
-  radar: true
+  radar: ${callbacks.radar_data}
   max_possible: 1.0
   inverse: true
