rte example configs and tags updated

--- a/reliability_checklist/configs/task/qnli.yaml
+++ b/reliability_checklist/configs/task/qnli.yaml
@@ -13,6 +13,6 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["mnli", "test"]
+tags: ["qnli", "test"]
 
 seed: 42
