--- a/reliability_checklist/configs/task/rte.yaml
+++ b/reliability_checklist/configs/task/rte.yaml
@@ -4,15 +4,15 @@
 # python train.py experiment=example
 
 defaults:
-  - override /datamodule: mrpc.yaml
+  - override /datamodule: rte.yaml
   - override /model: inference.yaml
   - override /callbacks: general_evals.yaml
   - override /trainer: default.yaml
-  - override /custom_model: bert_base_uncased_mrpc.yaml
+  - override /custom_model: bert_base_uncased_rte.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["mrpc", "test"]
+tags: ["rte", "test"]
 
 seed: 42
