--- a/reliability_checklist/configs/task/rte.yaml
+++ b/reliability_checklist/configs/task/rte.yaml
@@ -9,6 +9,7 @@ defaults:
   - override /callbacks: general_evals.yaml
   - override /trainer: default.yaml
   - override /custom_model: bert_base_uncased_rte.yaml
+  - override /augmentation: rte.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
