--- a/reliability_checklist/configs/task/sst2.yaml
+++ b/reliability_checklist/configs/task/sst2.yaml
@@ -9,6 +9,7 @@ defaults:
   - override /callbacks: general_evals.yaml
   - override /trainer: default.yaml
   - override /custom_model: distilbert-base-uncased-finetuned-sst-2-english.yaml
+  - override /augmentation : sst2.yaml
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
